objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>New Standard</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Opportunity</fullName>
        <description>This is a standard opportunity</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Line_Item_Count__c</fullName>
        <label>Line Item Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Management_Approval_Stage__c</fullName>
        <description>Allows visibility to where the record is at in the approval process for reporting purposes</description>
        <label>Management Approval Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Submission</fullName>
                    <default>true</default>
                    <label>Initial Submission</label>
                </value>
                <value>
                    <fullName>Manager Approval</fullName>
                </value>
                <value>
                    <fullName>Manager Approved</fullName>
                </value>
                <value>
                    <fullName>Manager Rejected</fullName>
                </value>
                <value>
                    <fullName>Director Approval</fullName>
                </value>
                <value>
                    <fullName>Director Approved</fullName>
                </value>
                <value>
                    <fullName>Director Rejected</fullName>
                </value>
                <value>
                    <fullName>CEO Approval</fullName>
                </value>
                <value>
                    <fullName>CEO Rejected</fullName>
                </value>
                <value>
                    <fullName>CEO Approved</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Management_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether this opportunity is approved by management</description>
        <inlineHelpText>Determines whether this opportunity is approved by management</inlineHelpText>
        <label>Management Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Naveen_Custom1__c</fullName>
        <label>Naveen_Custom1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount_Tracker__c</fullName>
        <label>Opportunity Amount Tracker</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Deal_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of the deal when the opportunity was created</description>
        <label>Original Deal Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PT_Markdown__c</fullName>
        <description>test change sets</description>
        <label>PT Markdown</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Deal_Amt_Change__c</fullName>
        <formula>Amount -  Original_Deal_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Deal Amt Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Quota</fullName>
        <active>true</active>
        <businessProcess>Standard Opportunity</businessProcess>
        <description>Used for setting quotas for each quarter</description>
        <label>Quota</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Standard Opportunity</businessProcess>
        <description>Used for standard opportunity</description>
        <label>Standard Opportunity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Ex1_Opportunity_Lock_after_Close</fullName>
        <active>false</active>
        <description>Prevent editing when opportunity closes</description>
        <errorConditionFormula>/* Display Error if Condition is Met */ 
AND( 

/* Cond1 – If user changed state or other field when stage was closed */
 OR(
 AND(NOT(IsChanged(StageName)),OR( ISPICKVAL(StageName, &quot;Closed Won&quot;),ISPICKVAL(StageName, &quot;Closed Lost&quot;))),

 AND(ISCHANGED(StageName),
               OR(TEXT(PRIORVALUE(StageName)) =  &apos;Closed Lost&apos;, TEXT(PRIORVALUE(StageName)) = &apos;Closed Won&apos;
                ) /* End of AND */
             ) /* End of  AND */
 ) /* End of OR */
,
/* Cond2 - If user is not administrator */
      $Profile.Name&lt;&gt;&apos;System Administrator&apos;,

/* If &lt; 10 days from closed date, owner can change description or if &gt; 10 days lock all fields */
        OR(ISCHANGED( Name ) , ISCHANGED(  AccountId  ), ISCHANGED(   Type   ), ISCHANGED(     CampaignId     ), ISCHANGED(    ForecastCategoryName    ), ISCHANGED(    CloseDate    ), ISCHANGED(    StageName    ),ISCHANGED(    Probability    ),ISCHANGED(    LeadSource    ),ISCHANGED(    NextStep    ),
 AND(ISCHANGED(Description), $User.Id&lt;&gt;OwnerId),
 AND(ISCHANGED(Description), $User.Id=OwnerId, CloseDate + 10 &lt; Today())
         ) /* End of OR */

) /* End of AND */</errorConditionFormula>
        <errorMessage>Opportunity cannot be edited after it is Closed.  Refer to the opportunity owner or the system administrator in order to make a change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ex1_Opportunity_Lock_after_Close_v2</fullName>
        <active>false</active>
        <description>Prevent editing when opportunity closes</description>
        <errorConditionFormula>/* Display Error if Condition is Met */ 
AND( 

/* Cond1 – If user changed state or other field when stage was closed */
 OR(
 AND(NOT(IsChanged(StageName)),OR( ISPICKVAL(StageName, &quot;Closed Won&quot;),ISPICKVAL(StageName, &quot;Closed Lost&quot;))),

 AND(ISCHANGED(StageName),
               OR(TEXT(PRIORVALUE(StageName)) =  &apos;Closed Lost&apos;, TEXT(PRIORVALUE(StageName)) = &apos;Closed Won&apos;
                ) /* End of AND */
             ) /* End of  AND */
 ) /* End of OR */
,
/* Cond2 - If user is not administrator */
      $Profile.Name&lt;&gt;&apos;System Administrator&apos;,

/* If &lt; 10 days from closed date, owner can change description or if &gt; 10 days lock all fields */
        OR(ISCHANGED( Name ) , ISCHANGED(  AccountId  ), ISCHANGED(   Type   ), ISCHANGED(     CampaignId     ), ISCHANGED(    ForecastCategoryName    ), ISCHANGED(    CloseDate    ), ISCHANGED(    StageName    ),ISCHANGED(    Probability    ),ISCHANGED(     Amount     ),ISCHANGED(    LeadSource    ),ISCHANGED(    NextStep    ),
 AND(ISCHANGED(Description), ($User.Id&lt;&gt;OwnerId   &amp;&amp;  $User.Id&lt;&gt;  Owner.ManagerId )),
 AND(ISCHANGED(Description), CloseDate + 10 &lt; Today())
         ) /* End of OR */

) /* End of AND */</errorConditionFormula>
        <errorMessage>Opportunity cannot be edited after it is Closed.  Refer to the opportunity owner or the system administrator in order to make a change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Markdown_LT_1000</fullName>
        <active>true</active>
        <errorConditionFormula>PT_Markdown__c &gt; 1000</errorConditionFormula>
        <errorDisplayField>PT_Markdown__c</errorDisplayField>
        <errorMessage>Markdown cannot be greater than 1000</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Line_Deletion</fullName>
        <active>false</active>
        <description>Prevents users from deleting opportunity products after an opportunity is closed. Create the following validation rule example on opportunities. It uses a custom roll-up summary field on opportunities that counts the number of   opportunity products</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(StageName , &quot;Closed Won&quot;),
ISPICKVAL(StageName , &quot;Closed Lost&quot;)),
Line_Item_Count__c  &lt; PRIORVALUE(Line_Item_Count__c))</errorConditionFormula>
        <errorMessage>Opportunity Line Items cannot be deleted because the Opportunity is closed.</errorMessage>
    </validationRules>
</CustomObject>